--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vuex": "^4.0.0"
+    "vue": "3.2.26",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
